--- a/static/style.css
+++ b/static/style.css
@@ -109,39 +109,30 @@ nav {
 nav .logo {
   width: 100px;
 }
-nav a:hover {
-  text-decoration: underline !important;
-}
 
 footer {
-  clear: both;
-  display: block;
-  position: relative;
   background: #2b2b2b;
   color: white;
-  overflow: hidden;
 }
-footer #contact-footer {
-  float: left;
-  margin: 20px;
+footer .contact-footer {
+  margin-bottom: 20px;
   font-size: 12px;
 }
-footer #contact-footer p {
+footer .contact-footer p {
   margin: 10px;
-  float: left;
 }
-footer #social-media {
-  float: right;
+footer .social-media i {
+  margin-top: 10px;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
-footer #social-media i {
-  margin: 20px;
-}
-footer #copyright p {
+footer .copyright p {
   font-size: 10px;
+  margin: 0;
+  padding-bottom: 10px;
   text-align: center;
 }
 footer a:hover {
-  text-decoration: none !important;
   color: white !important;
 }
 
