--- a/static/utilities/_nav_footer.scss
+++ b/static/utilities/_nav_footer.scss
@@ -5,39 +5,35 @@ nav {
     background: $background1;
   
     .logo{width: 100px;}
+}
   
-    a:hover {text-decoration: underline !important}
-  }
-  
-  footer {
-    clear: both;
-    display: block;
-    position: relative;
-    background: #2b2b2b;
-    color: $text-color1;
-    overflow: hidden;
-    #contact-footer {
-      float: left;
-      margin: 20px;
-      font-size: 12px;
-      p {
-        margin: 10px;
-        float: left;
-      }
-    }
-    #social-media {
-      float: right;
-      i {
-        margin: 20px;
-        //margin-right: 50px;
-      }
-    }
-    #copyright p {
-      font-size: 10px;
-      text-align: center;
-    }
-    a:hover {
-      text-decoration: none !important;
-      color: $text-color1 !important;
+footer {
+  background: $footer-background;
+  color: $text-color1;
+  .contact-footer {
+
+    margin-bottom: 20px;
+    font-size: 12px;
+    p {
+      margin: 10px;
+      
     }
   }
+  .social-media {
+    
+    i {
+      margin-top: 10px;
+      margin-right: 20px;
+      margin-bottom: 20px;
+    }
+  }
+  .copyright p {
+    font-size: 10px;
+    margin: 0;
+    padding-bottom: 10px;
+    text-align: center;
+  }
+  a:hover {
+    color: $text-color1 !important;
+  }
+}
