--- a/static/utilities/_variables.scss
+++ b/static/utilities/_variables.scss
@@ -14,6 +14,8 @@ $background3: #ffe442;
 
 $background4:#ffdb00;
 
+$footer-background:#2b2b2b;
+
 $font: 'Open Sans', sans-serif; 
 
 @mixin shadow {
