--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,7 @@
         ABOUT
     ********************************-->
 
-    <div class="about row">
+    <div id="about" class="about row">
 
         <!-- About - Carousel -->
         <div    class=" carousel 
@@ -130,7 +130,7 @@
                 SERVICES 
         ********************************-->
         
-        <ul class="services list-group mb-3">
+        <ul id="services" class="services list-group mb-3">
 
             <!-- Title -->
             <a data-toggle="collapse" href="#services-collapse">
@@ -175,7 +175,7 @@
             PROJECTS 
         ********************************-->
 
-        <ul class="projects list-group pb-3">
+        <ul id="projects" class="projects list-group pb-3">
 
             <!-- Title -->
             <a data-toggle="collapse" href="#projects-collapse">
@@ -279,7 +279,7 @@
         CONTACT 
     ********************************-->
 
-    <div class="contact">
+    <div id="contact" class="contact">
         
         <!-- Section Title -->
 
