--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -86,7 +86,7 @@
 
     <!-- FOOTER -->
 
-    <footer>
+    <footer class="{{ 'fixed-bottom' if fixedFooter else '' }}">
 		<div class="row">
 			<div class="contact-footer col-sm text-sm-left text-center">
 				<p><strong>Arquitecto: </strong> {{data.contact.name}}</p>
