--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -317,20 +317,20 @@
                <!--  Name -->
                 <div class="mb-3">
                     <label for="name" class="form-label">{{data.contact.form.name}}</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" name="name">
                 </div>
 
                 <!-- Email -->
                 <div class="mb-3">
                     <label for="e-mail" class="form-label">{{data.contact.form.email}}</label>
-                    <input type="email" class="form-control" id="e-mail">
+                    <input type="email" class="form-control" id="e-mail" name="email">
                 </div>
                 
                 <!-- Description -->
 
                 <div class="mb-3">
                     <label for="description" class="form-label">{{data.contact.form.description}}</label>
-                    <textarea type="text" class="form-control" id="description" rows="10"></textarea>
+                    <textarea type="text" class="form-control" id="description" rows="10" name="description"></textarea>
                 </div>
 
                 <!-- Submit -->
