--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -17,7 +17,7 @@
             href="{{ url_for('static', filename='favicon.ico') }}">
     <!--CSS-->
     <link   rel="stylesheet" 
-            href="{{ url_for('static', filename='style.css') }}">
+            href="{{ url_for('static', filename='styles/style.css') }}">
     <!-- Bootstrap CSS -->
     <link   rel="stylesheet" 
             href="{{ url_for('static', filename='bootstrap-4.0.0-dist/css/bootstrap.css') }}">
