--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -1,3 +1,16 @@
+main {
+  position: relative;
+}
+main modal {
+  display: block;
+  border-radius: 20px;
+  background-color: red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .header-phone {
   height: 9vh;
   overflow: hidden;
@@ -104,7 +117,7 @@
 }
 
 nav {
-  background: white;
+  background: lightgrey;
 }
 nav .logo {
   width: 100px;
