--- a/application/static/styles/_variables.scss
+++ b/application/static/styles/_variables.scss
@@ -16,6 +16,8 @@ $background4:#ffdb00;
 
 $footer-background:#2b2b2b;
 
+$nav-background: lightgrey;
+
 $font: 'Open Sans', sans-serif; 
 
 @mixin shadow {
