--- a/application/static/styles/_variables.scss
+++ b/application/static/styles/_variables.scss
@@ -6,6 +6,8 @@ $text-color1: white;
 $text-color2:#504f4f;
 $text-hover:#252525;
 
+$background:blue;
+
 $background1: white;
 
 $background2:#f1f1f1;
