no modal display

--- a/application/templates/home1.html
+++ b/application/templates/home1.html
@@ -38,7 +38,7 @@
     </div>
     <div class="block2"></div>
     <div class="stick"></div>
-    <modal>
+    <modal class="d-none">
         hello
     </modal>
 </main>
