images folder algorithm

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -36,7 +36,7 @@
         <a  class="navbar-brand" 
             href="{{ url_for('home') }}">
             <img    class="logo" 
-                    src="{{ url_for('static', filename='img/logo2.png') }}">
+                    src="{{ url_for('static', filename='img/logo.png') }}">
         </a>
         <!-- Change Language -->
         <form method="post" action="/changeLanguage">
