--- a/application/templates/home1.html
+++ b/application/templates/home1.html
@@ -8,33 +8,31 @@
         <!-- About - Carousel -->
         <div    class=" carousel 
                         slide
+                        col-sm
                         d-none
                         d-sm-block" 
-                        data-ride="carousel">
+                data-ride="carousel">
             <div class="carousel-inner">
 
                 <!-- Object to activate carousel -->
                 {% set carousel = { 'active':True } %}
 
-                {% for i in range (0,4)%}
+                {% for image in images.introSlider %}
 
-                <!-- Carousel item -->
-                <div class="carousel-item {{ 'active' if carousel.active else '' }}"> 
+                    <!-- Carousel item -->
+                    <div class="carousel-item {{ 'active' if carousel.active else '' }}"> 
 
-                    <img    class="img-fluid"
-                            src="{{ url_for(   'static',
-                                                filename='/'.join([ 'img', 
-                                                                    'about-' + i|string + '.jpg'
-                                                                    ]))}} "  
-                        >
-                </div>
+                        <img    class="img-fluid"
+                                src="{{ url_for('static',filename = images.introSlider[image])  }}">
+                    </div>
 
-                <!-- Update caraousel object -->
-                {% if carousel.update({'active': False}) %} {% endif %}
+                    <!-- Update caraousel object -->
+                    {% if carousel.update({'active': False}) %} {% endif %}
 
                 {% endfor %}
             </div>
         </div>
+
     </div>
     <div class="block2"></div>
     <div class="stick"></div>
