--- a/application/static/styles/_home.scss
+++ b/application/static/styles/_home.scss
@@ -6,18 +6,36 @@
 main{
   position: relative;
   display: flex !important;
+  
   .block1{
     background-color: orange;
+    position: relative;
+
+    .greeting{
+      @include center;
+      background-color: green;
+      text-align: center;
+
+      .text{
+        margin-top: 3vh;
+
+        h1{
+          font-size: 20px;
+        }
+
+        h2{
+          font-size: 16px;
+        }
+      }
+    }
   }
+  
   .block2{
     background-color: aqua;
   }
 
   .stick{
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    @include center;
     background-color: black;
     border-radius: 20px;
     width: 15px;
@@ -26,10 +44,7 @@ main{
   modal{
     background-color: red;
     border-radius: 20px;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    @include center;
   }
 }
 
