--- a/application/static/styles/_variables.scss
+++ b/application/static/styles/_variables.scss
@@ -40,3 +40,10 @@ $font: 'Open Sans', sans-serif;
   }
 
 }
+
+@mixin center{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
