--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -36,12 +36,25 @@ main .stick {
   width: 15px;
 }
 main modal {
+  display: none;
   background-color: red;
   border-radius: 20px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+main modal #about {
+  display: none;
+}
+main modal #projects {
+  display: none;
+}
+main modal #services {
+  display: none;
+}
+main modal #contact {
+  display: none;
 }
 
 .header-phone {
