--- a/application/templates/home1.html
+++ b/application/templates/home1.html
@@ -16,10 +16,23 @@
         </div>
 
     </div>
-    <div class="block2"></div>
+    <div class="block2">
+
+        <button id="aboutButton">{{data.about.title}}</button>
+        <button id="projectsButton">{{data.projects.title}}</button>
+        <button id="servicesButton">{{data.services.title}}</button>
+        <button id="contactButton">{{data.contact.title}}</button>
+
+    </div>
+
     <div class="stick"></div>
-    <modal class="d-none">
-        hello
+    
+    <modal>
+        <button id="closeModal">Close</button>
+        <div id ="about">About Section</div>
+        <div id ="projects">Projects Section</div>
+        <div id ="services">Services Section</div>
+        <div id ="contact">Contact Section</div>
     </modal>
 </main>
 
