--- a/application/static/styles/_home.scss
+++ b/application/static/styles/_home.scss
@@ -45,6 +45,7 @@ main{
     display: none;
     background-color: red;
     border-radius: 20px;
+    overflow: scroll;
     @include center;
 
     #about{
@@ -59,9 +60,13 @@ main{
     #contact{
       display: none;
     }
+    #closeModal{
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
   }
 }
-
 
 .header-phone {
   
