--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -39,6 +39,7 @@ main modal {
   display: none;
   background-color: red;
   border-radius: 20px;
+  overflow: scroll;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -55,6 +56,11 @@ main modal #services {
 }
 main modal #contact {
   display: none;
+}
+main modal #closeModal {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .header-phone {
