--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,179 +2,85 @@
 {% block content %}
 
 <main>
-    <header>
-        <!--****************************
-            HOME PAGE
-        ********************************-->
+    
+    <div class="block1">
 
-        <!-- HEAD - Computer optimize -->
-        <div    id="carouselHeader"
-                class=" carousel 
-                        slide 
-                        carousel-fade 
-                        d-none 
-                        d-sm-block" 
-                data-ride="carousel">
-            
-            <div class="carousel-inner">
-                
-                <!-- Object to activate carousel -->
-                {% set carousel = { 'active':True } %}
-                        
-                {% for i in range (1,6)%}
-
-                    <!-- Carousel item -->
-                    <div class="carousel-item {{ 'active' if carousel.active else '' }}">            
-                        
-                        <!-- img -->
-                        <img    class="d-block w-100"
-                                src="{{ url_for(   'static',
-                                                    filename='/'.join([ 'img', 
-                                                                        'bg-' + i|string + '.jpg'
-                                                                        ]))}} ">
-                        <!-- Text -->
-                        <div class="carousel-caption">
-                            <h1>{{data.carousel.title}}</h1>
-                            <p>{{data.carousel.slogan}}</p>
-                        </div>
-
-                    </div>
-
-                    <!-- Update caraousel object -->
-                    {% if carousel.update({'active': False}) %} {% endif %}
-
-                {% endfor %}      
-            </div>
-
-            <!-- Controls - Bootstrap previus and next -->
-
-            <a class="carousel-control-prev" href="#carouselHeader" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselHeader" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-
-        </div>
-
-        <!-- HEAD - Phone optimize -->
-        <div class="header-phone d-sm-none">
-            
-            <div class="text">
+        <div class="greeting">
+            <img class="img-fluid" 
+                src="{{ url_for('static',filename ='img/introSlider/building.jpg') }}"
+                alt="building">
+            <div class="text">    
                 <h1>{{data.carousel.title}}</h1>
-                <p>{{data.carousel.slogan}}</p>
-            </div>
-            <img src="{{ url_for('static', filename='img/bg-1.jpg')}}">
-            
-        </div>
-
-    </header>
-
-    <!--****************************
-        ABOUT
-    ********************************-->
-
-    <div id="about" class="about row">
-
-        <!-- About - Carousel -->
-        <div    class=" carousel 
-                        slide
-                        col-sm
-                        d-none
-                        d-sm-block" 
-                data-ride="carousel">
-            <div class="carousel-inner">
-
-                <!-- Object to activate carousel -->
-                {% set carousel = { 'active':True } %}
-
-                {% for i in range (0,4)%}
-
-                    <!-- Carousel item -->
-                    <div class="carousel-item {{ 'active' if carousel.active else '' }}"> 
-
-                        <img    class="img-fluid"
-                                src="{{ url_for(   'static',
-                                                    filename='/'.join([ 'img', 
-                                                                        'about-' + i|string + '.jpg'
-                                                                        ]))}} "  
-                            >
-                    </div>
-
-                    <!-- Update caraousel object -->
-                    {% if carousel.update({'active': False}) %} {% endif %}
-
-                {% endfor %}
+                <h2>{{data.carousel.slogan}}</h2>
             </div>
         </div>
 
-        <!-- About - Text -->
-        <div class="text col-sm">
+    </div>
+    <div class="block2">
 
-            <h2><strong>{{data.about.title}}</strong></h2>
-            <p>{{data.about.description}} </p>
+        <button id="aboutButton">{{data.about.title}}</button>
+        <button id="projectsButton">{{data.projects.title}}</button>
+        <button id="servicesButton">{{data.services.title}}</button>
+        <button id="contactButton">{{data.contact.title}}</button>
 
-            <br>
-
-            <h2><strong>{{data.objective.title}}</strong></h2>
-            <p>{{data.objective.description}}</p>
-
-        </div>
     </div>
 
-    <div class="services-projects">
-
+    <div class="stick"></div>
+    
+    <modal>
+       
         <!--****************************
-                SERVICES 
+        ABOUT
         ********************************-->
-        
-        <ul id="services" class="services list-group mb-3">
+        <div id="about" class="about row">
 
-            <!-- Title -->
-            <a data-toggle="collapse" href="#services-collapse">
-
-                <li class="list-group-item title"><h2><strong>{{data.services.title}}</strong></h2></li>
-
-            </a>
-
-            {% for service in data.services.list%}
-
-                <!-- Collapse Functionality -->
-
-                <a  id="services-collapse"
-                    class="collapse"
-                    data-toggle="collapse" 
-                    href="#service-collapse-{{service.id}}">
-
-                    <li class="list-group-item"><strong>{{service.name}}</strong></li>
-                
-                </a>
-
-                <!-- Adding a variable to a html attribute -->
-                <div id="service-collapse-{{service.id}}" class="collapse body">
-
-                    <img 
-                    class="img-fluid img-thumbnail"
-                    src="{{ url_for(   'static',
-                                        filename='/'.join([ 'img', 
-                                                            'services', 
-                                                            service.id + '-1.jpg'
-                                                            ]))}} ">
-
-                    <p>{{service.description}}</p>
-
+            <!-- About - Carousel -->
+            <div    class=" carousel 
+                            slide
+                            col-sm
+                            d-none
+                            d-sm-block" 
+                    data-ride="carousel">
+                <div class="carousel-inner">
+    
+                    <!-- Object to activate carousel -->
+                    {% set carousel = { 'active':True } %}
+    
+                    {% for image in images.about %}
+    
+                        <!-- Carousel item -->
+                        <div class="carousel-item {{ 'active' if carousel.active else '' }}"> 
+    
+                            <img    class="img-fluid"
+                                    src="{{ url_for(   'static',
+                                                        filename= images.about[image])}} "  
+                                >
+                        </div>
+    
+                        <!-- Update caraousel object -->
+                        {% if carousel.update({'active': False}) %} {% endif %}
+    
+                    {% endfor %}
                 </div>
+            </div>
+    
+            <!-- About - Text -->
+            <div class="text col-sm">
+    
+                <h2><strong>{{data.about.title}}</strong></h2>
+                <p>{{data.about.description}} </p>
+    
+                <br>
+    
+                <h2><strong>{{data.objective.title}}</strong></h2>
+                <p>{{data.objective.description}}</p>
+    
+            </div>
+        </div>
 
-            {% endfor %}
-
-        </ul>
-        
         <!--**************************** 
             PROJECTS 
         ********************************-->
-
         <ul id="projects" class="projects list-group pb-3">
 
             <!-- Title -->
@@ -273,72 +179,115 @@
                 </div>
             {% endfor %}
         </ul>
-    </div>
 
-    <!--**************************** 
-        CONTACT 
-    ********************************-->
+        <!--****************************
+                SERVICES 
+        ********************************-->
+        <ul id="services" class="services list-group mb-3">
 
-    <div id="contact" class="contact">
+            <!-- Title -->
+
+            <li class="list-group-item title"><h2><strong>{{data.services.title}}</strong></h2></li>
+
+
+            {% for service in data.services.list%}
+
+                <!-- Collapse Functionality -->
+
+                <a  id="services-collapse"
+                    data-toggle="collapse" 
+                    href="#service-collapse-{{service.id}}">
+
+                    <li class="list-group-item"><strong>{{service.name}}</strong></li>
+                
+                </a>
+
+                <!-- Adding a variable to a html attribute -->
+                <div id="service-collapse-{{service.id}}" class="collapse body">
+
+                    <img 
+                    class="img-fluid img-thumbnail"
+                    src="{{ url_for(   'static',
+                                        filename='/'.join([ 'img', 
+                                                            'services', 
+                                                            service.id + '-1.jpg'
+                                                            ]))}} ">
+
+                    <p>{{service.description}}</p>
+
+                </div>
+
+            {% endfor %}
+
+        </ul>
         
-        <!-- Section Title -->
+        <!--**************************** 
+            CONTACT 
+        ********************************-->
+        <div id="contact" class="contact">
+        
+            <!-- Section Title -->
 
-        <h2><strong>{{data.contact.title}}</strong></h2>
+            <h2><strong>{{data.contact.title}}</strong></h2>
 
-        <div class="row">
+            <div class="row">
 
-            <!-- Name, Phone & Maps -->
+                <!-- Name, Phone & Maps -->
 
-            <div class="col-sm">
+                <div class="col-sm">
 
-                <!-- Text -->
-                <div class="text">
-                    <p><strong>Arquitecto: </strong>{{data.contact.name}}</p>
-                    <p><strong>Teléfono: </strong>{{data.contact.phone}}</p>
+                    <!-- Text -->
+                    <div class="text">
+                        <p><strong>Arquitecto: </strong>{{data.contact.name}}</p>
+                        <p><strong>Teléfono: </strong>{{data.contact.phone}}</p>
+                    </div>
+
+                    <!-- Embeded Maps / 1:1 aspect ratio  -->
+                    <div class="embed-responsive embed-responsive-1by1">
+                        <iframe class="embed-responsive-item" 
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63836.69300401769!2d-78.48293860910093!3d-0.20286038013794772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590eb5647cd6d%3A0xb8e005887399b0b9!2sQuito%20170157!5e0!3m2!1sen!2sec!4v1663201820344!5m2!1sen!2sec">
+                        </iframe>
+                    </div>
+                    
+
                 </div>
+            
+                <!-- Form -->
+                <form   class="col-sm"
+                        method="POST">
 
-                <!-- Embeded Maps / 1:1 aspect ratio  -->
-                <div class="embed-responsive embed-responsive-1by1">
-                    <iframe class="embed-responsive-item" 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63836.69300401769!2d-78.48293860910093!3d-0.20286038013794772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590eb5647cd6d%3A0xb8e005887399b0b9!2sQuito%20170157!5e0!3m2!1sen!2sec!4v1663201820344!5m2!1sen!2sec">
-                    </iframe>
-                </div>
-                
+                    <!-- Form title -->
+                    <h3>{{data.contact.form.title}}</h3>
 
+                <!--  Name -->
+                    <div class="mb-3">
+                        <label for="name" class="form-label">{{data.contact.form.name}}</label>
+                        <input type="text" class="form-control" id="name" name="name">
+                    </div>
+
+                    <!-- Email -->
+                    <div class="mb-3">
+                        <label for="e-mail" class="form-label">{{data.contact.form.email}}</label>
+                        <input type="email" class="form-control" id="e-mail" name="email">
+                    </div>
+                    
+                    <!-- Description -->
+
+                    <div class="mb-3">
+                        <label for="description" class="form-label">{{data.contact.form.description}}</label>
+                        <textarea type="text" class="form-control" id="description" rows="10" name="description"></textarea>
+                    </div>
+
+                    <!-- Submit -->
+                    
+                    <button type="submit" class="btn btn-primary">{{data.contact.form.send}}</button>
+                </form>
             </div>
-           
-            <!-- Form -->
-            <form   class="col-sm"
-                    method="POST">
-
-                 <!-- Form title -->
-                <h3>{{data.contact.form.title}}</h3>
-
-               <!--  Name -->
-                <div class="mb-3">
-                    <label for="name" class="form-label">{{data.contact.form.name}}</label>
-                    <input type="text" class="form-control" id="name" name="name">
-                </div>
-
-                <!-- Email -->
-                <div class="mb-3">
-                    <label for="e-mail" class="form-label">{{data.contact.form.email}}</label>
-                    <input type="email" class="form-control" id="e-mail" name="email">
-                </div>
-                
-                <!-- Description -->
-
-                <div class="mb-3">
-                    <label for="description" class="form-label">{{data.contact.form.description}}</label>
-                    <textarea type="text" class="form-control" id="description" rows="10" name="description"></textarea>
-                </div>
-
-                <!-- Submit -->
-                
-                <button type="submit" class="btn btn-primary">{{data.contact.form.send}}</button>
-              </form>
         </div>
-    </div>
+
+        <button id="closeModal">Close</button>
+    </modal>
 </main>
+
 
 {% endblock %}
