--- a/application/static/styles/_nav_footer.scss
+++ b/application/static/styles/_nav_footer.scss
@@ -2,9 +2,32 @@
 @import "variables";
 
 nav {
-    background: $nav-background;
-  
-    .logo{width: 100px;}
+  background: $nav-background;
+
+  img {
+    width: 56px;
+    opacity: 0.8;
+  }
+
+  img:hover {
+    opacity: 1.0;
+  }
+
+  .logo{
+    width: 100px;
+  }
+  form{
+    text-align: center;
+  }
+
+  .social-media{
+    text-align: end;
+
+    img {
+      margin-left: 10px;
+    }
+  }
+    
 }
   
 footer {
