--- a/application/static/styles/style.scss
+++ b/application/static/styles/style.scss
@@ -1,26 +1,22 @@
 @use 'home';
 @use 'nav_footer';
 @use 'success';
-
-// Utilities
 @import "variables";
 
+// root
 html{
   background-color: $background;
   font-family: $font;
   body {
-    background-color: $background;
+  @include shadow;
   }
+}
+
+// bootstrap classes
+.container{
+  padding: 0 !important;
 }
 
 .row{
   margin: 0 !important;
-}
-
-a {
-  color: $text-color2 !important;
-}
-a:hover {
-  text-decoration: none !important;
-  color: $text-hover !important;
 }
