--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -168,6 +168,70 @@ main modal #closeModal {
   max-width: 400px;
 }
 
+.glow-on-hover {
+  min-height: 50px;
+  border: none;
+  outline: none;
+  color: #ff9c00;
+  background: orange;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+}
+
+.glow-on-hover:before {
+  content: "";
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #ff0000);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+.glow-on-hover:active {
+  color: #000;
+}
+
+.glow-on-hover:active:after {
+  background: transparent;
+}
+
+.glow-on-hover:hover:before {
+  opacity: 1;
+}
+
+.glow-on-hover:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #ffb32b;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
 nav {
   background: orange;
 }
@@ -178,17 +242,14 @@ nav img {
 nav img:hover {
   opacity: 1;
 }
-nav .logo {
+nav .logo img {
   width: 100px;
 }
-nav form {
+nav .language {
   text-align: center;
 }
 nav .social-media {
   text-align: end;
-}
-nav .social-media img {
-  margin-left: 10px;
 }
 
 footer {
