--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -84,30 +84,8 @@
     ********************************-->
 
     <footer>
-        My footer
+            <span>Esencial construcciones copyright@ 2019</span>
     </footer>
-
-    <!-- <footer class="">
-		<div class="row">
-			<div class="contact-footer col-sm text-sm-left text-center">
-				<p><strong>Arquitecto: </strong> {{data.contact.name}}</p>
-				<p><i class="fab fa-whatsapp"></i> {{data.contact.phone}}</p>
-
-			</div>
-			<div class="social-media col-sm d-sm-block d-none">
-
-				<a href="https://www.facebook.com/Esencial-Estudio-281058769179882/" target="-blanck"><i id="facebook-icon"
-						class="fab fa-facebook-square fa-2x"></i></a>
-				<a href="https://www.youtube.com/channel/UCrDmOTQr7J_qkJ4qD-LyoAg" target="_blank"><i id="youtube-icon"
-						class="fab fa-youtube fa-2x"></i></a>
-			</div>
-		</div>
-        
-        <div class="copyright">
-            <p>Esencial construcciones copyright@ 2019</p>
-        </div>
-    </footer> -->
-    
 </body>
 
 <!-- jQuery -->
