--- a/application/static/styles/_nav_footer.scss
+++ b/application/static/styles/_nav_footer.scss
@@ -31,31 +31,9 @@ nav {
   
 footer {
   background: $footer-background;
-  color: $text-color1;
-  .contact-footer {
-
-    margin-bottom: 20px;
-    font-size: 12px;
-    p {
-      margin: 10px;
-      
-    }
-  }
-  .social-media {
-    
-    i {
-      margin-top: 10px;
-      margin-right: 20px;
-      margin-bottom: 20px;
-    }
-  }
-  .copyright p {
-    font-size: 10px;
-    margin: 0;
-    padding-bottom: 10px;
-    text-align: center;
-  }
-  a:hover {
-    color: $text-color1 !important;
-  }
+  color: $footer-color;
+  font-size: 10px;
+  margin: 0;
+  padding: 10px 0px;
+  text-align: center;
 }
