--- a/application/static/styles/style.css
+++ b/application/static/styles/style.css
@@ -58,9 +58,9 @@ main modal #contact {
   display: none;
 }
 main modal #closeModal {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
+  top: 1;
+  left: 1;
 }
 
 .header-phone {
