--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -19,9 +19,10 @@
     <link   rel="stylesheet" 
             href="{{ url_for('static', filename='styles/style.css') }}">
     <!-- Bootstrap CSS -->
-    <link   rel="stylesheet" 
-            href="{{ url_for('static', filename='bootstrap-4.0.0-dist/css/bootstrap.css') }}">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+          rel="stylesheet" 
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+          crossorigin="anonymous">
     <!-- Google Font -->
     <link   href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" 
             rel="stylesheet">
@@ -90,17 +91,9 @@
 
 <!-- jQuery -->
 <script src="{{ url_for('static', filename='js/jQuery.js') }}"></script>
-<!-- Poppers.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous">
-</script>
 <!-- Bootstrap JS -->
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous">
-</script>
-<!-- FontAwesome-->
-<script src="https://kit.fontawesome.com/dc026d6440.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" 
+        crossorigin="anonymous"></script>
 <!-- script-->
 <script src="{{ url_for('static', filename='js/script.js') }}"></script>
