--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -243,11 +243,11 @@
                     </div>
 
                     <!-- Embeded Maps / 1:1 aspect ratio  -->
-                    <div class="embed-responsive embed-responsive-1by1">
+                    <!-- <div class="embed-responsive embed-responsive-1by1">
                         <iframe class="embed-responsive-item" 
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63836.69300401769!2d-78.48293860910093!3d-0.20286038013794772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91d590eb5647cd6d%3A0xb8e005887399b0b9!2sQuito%20170157!5e0!3m2!1sen!2sec!4v1663201820344!5m2!1sen!2sec">
                         </iframe>
-                    </div>
+                    </div> -->
                     
 
                 </div>
@@ -285,7 +285,7 @@
             </div>
         </div>
 
-        <button id="closeModal">Close</button>
+        <button id="closeModal" class="btn-close"></button>
     </modal>
 </main>
 
