--- a/application/static/styles/_home.scss
+++ b/application/static/styles/_home.scss
@@ -31,7 +31,12 @@ main{
   }
 
   .block2{
-    background-color: aqua;
+    background-color: white;
+    position: relative;
+    button{
+      position: absolute;
+      display: block;
+    }
   }
 
   .stick{
@@ -61,9 +66,9 @@ main{
       display: none;
     }
     #closeModal{
-      position: fixed;
-      top: 1;
-      left: 1;
+      position: absolute;
+      top: 10px;
+      left: 10px;
     }
   }
 }
