--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -18,10 +18,22 @@
     </div>
     <div class="block2">
 
-        <button id="aboutButton">{{data.about.title}}</button>
-        <button id="projectsButton">{{data.projects.title}}</button>
-        <button id="servicesButton">{{data.services.title}}</button>
-        <button id="contactButton">{{data.contact.title}}</button>
+        <button id="aboutButton" 
+                class="glow-on-hover">
+                {{data.about.title}}
+        </button>
+        <button id="projectsButton" 
+                class="glow-on-hover">
+                {{data.projects.title}}
+        </button>
+        <button id="servicesButton" 
+                class="glow-on-hover">
+                {{data.services.title}}
+        </button>
+        <button id="contactButton" 
+                class="glow-on-hover">
+                {{data.contact.title}}
+        </button>
 
     </div>
 
